<resources>
    <string name="app_name">WeatherApp</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="image_contentDescription">image</string>
    <string name="miles_per_hour">miles/hour</string>
    <string name="enter_location">Enter location: </string>
    <string name="search">Search</string>
    <string name="humidity">humidity</string>
    <string name="refresh">Refresh</string>
    <string name="location">Check location</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="select_settings">Select unit:</string>
    <string name="selected_item">Selected Item</string>
    <string name="favourite_cities"> Favourite Cities: </string>
    <string name="save"> Save</string>
    <string name="back"> Go Back</string>

</resources>