<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.widget.Button
        android:id="@+id/location_activity"
        android:layout_width="160pt"
        android:layout_height="25pt"
        android:onClick="moveToLocationActivity"
        android:text="@string/location"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <android.widget.Button
        android:id="@+id/favourites_activity"
        android:layout_width="160pt"
        android:layout_height="25pt"
        android:onClick="moveToFavouritesActivity"
        android:text="@string/favourites"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_activity"
        app:layout_constraintVertical_bias="0.329"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <android.widget.Button
        android:id="@+id/settings_activity"
        android:layout_width="160pt"
        android:layout_height="25pt"
        android:onClick="moveToSettingsActivity"
        android:text="@string/settings"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_activity"
        app:layout_constraintVertical_bias="0.224"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>